deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-backend
  template:
    metadata:
      labels:
        app: staging-backend
    spec:
      containers:
        - name: backend
          image: gcr.io/${PROJECT_ID}/be-staging:${GITHUB_RUN_ID}
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: gcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: staging-backend-service
spec:
  selector:
    app: staging-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production-backend
  template:
    metadata:
      labels:
        app: production-backend
    spec:
      containers:
        - name: backend
          image: gcr.io/${PROJECT_ID}/be-production:${GITHUB_RUN_ID}
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: gcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: production-backend-service
spec:
  selector:
    app: production-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wanderai
  annotations:
    kubernetes.io/ingress.global-static-ip-name: wanderai
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: wanderai
spec:
  rules:
    - http:
        paths:
        - path: /stg/be
          pathType: ImplementationSpecific
          backend:
            service:
              name: staging-backend-service
              port: 
                number: 8000
        - path: /prod/be
          pathType: ImplementationSpecific
          backend:
            service:
              name: production-backend-service
              port: 
                number: 8000
